# OpenGL

./: .gitignore  CMakeLists.txt  README.md  config.h.in
glad/: glad.c
imgui/: imgui_impl_glfw_gl3.cpp
include/: camera.hpp  fbo.hpp  glad.h  image.hpp  imgui.ini  main.hpp  mixer.hpp  object.hpp  particles.hpp  poisson.hpp  quadtree.hpp  shader.hpp  stb_truetype.h  threadpool.hpp  water.hpp
src/butterfly/: butterfly.cpp
src/cdlod_tess/: cdlod_tess.cpp
src/fire/: fire.cpp
src/image/: image.cpp
src/model/: model.cpp
src/qt-culling/: qt-culling.cpp
src/qt-water/: camera.cpp  camera.hpp  config.h  image.hpp  openglwindow.cpp  openglwindow.h  setup_ui.cpp  testgl.cpp  testgl.pro  water.fs.glsl  water.tcs.glsl  water.tes.glsl  water.vs.glsl  window.cpp  window.h
src/radeonrays/: README.md  kernel.cl  main.cpp  meson.build  meson_options.txt  shader_manager.h  simple.fsh  tiny_obj_loader.h
src/radeonrays/data/: orig.mtl  orig.objm  sibenik.mtl
src/water/: controls  water.cpp
